--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,14 @@
           {
             "key": "Access-Control-Allow-Origin",
             "value": "https://pfannenstielhof-weingut.webflow.io"
+          },
+          {
+            "key": "Access-Control-Allow-Methods",
+            "value": "GET, POST, OPTIONS"
+          },
+          {
+            "key": "Access-Control-Allow-Headers",
+            "value": "Content-Type, Authorization"
           }
         ]
       }
