--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,24 @@
         "headers": [
           {
             "key": "Access-Control-Allow-Origin",
-            "value": "https://pfannenstielhof-weingut.webflow.io"
+            "value": "*"
+          },
+          {
+            "key": "Access-Control-Allow-Methods",
+            "value": "GET, POST, OPTIONS"
+          },
+          {
+            "key": "Access-Control-Allow-Headers",
+            "value": "Content-Type, Authorization"
+          }
+        ]
+      },
+      {
+        "source": "/(.*)",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
           },
           {
             "key": "Access-Control-Allow-Methods",
