--- a/vercel.json
+++ b/vercel.json
@@ -1,49 +1,17 @@
 {
-    "headers": [
-      {
-        "source": "/assets/(.*)",
-        "headers": [
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "https://pfannenstielhof-weingut.webflow.io/wein-einzel"
-          },
-          {
-            "key": "Access-Control-Allow-Methods",
-            "value": "GET, POST, OPTIONS"
-          },
-          {
-            "key": "Access-Control-Allow-Headers",
-            "value": "Content-Type, Authorization"
-          }
-        ]
-      },
-      {
-        "source": "/(.*)\\.js",
-        "headers": [
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "https://pfannenstielhof-weingut.webflow.io/wein-einzel"
-          }
-        ]
-      },
-      {
-        "source": "/(.*)\\.css",
-        "headers": [
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "https://pfannenstielhof-weingut.webflow.io/wein-einzel"
-          }
-        ]
-      },
-      {
-        "source": "/index.html",
-        "headers": [
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "https://pfannenstielhof-weingut.webflow.io/wein-einzel"
-          }
-        ]
-      }
-    ]
-  }
-  
+  "headers": [
+    {
+      "source": "/:all*(js|css|json|glb|gltf)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "https://pfannenstielhof-weingut.webflow.io"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, OPTIONS"
+        }
+      ]
+    }
+  ]
+}
